update env and code

--- a/env.yaml
+++ b/env.yaml
@@ -4,9 +4,10 @@ channels:
   - defaults
 dependencies:
   - python=3.8.5
-  - numpy=1.21.5
-  - matplotlib
+  - pip>=20.3
   - pip:
+    - numpy
+    - matplotlib
     - omegaconf==2.1.1
     - einops==0.3.0
     - torch-fidelity==0.3.0
