--- a/env.yaml
+++ b/env.yaml
@@ -11,8 +11,9 @@ dependencies:
     - omegaconf==2.1.1
     - einops==0.3.0
     - torch-fidelity==0.3.0
-    - --extra-index-url https://download.pytorch.org/whl/cu116 torch==1.12.1
-    - --extra-index-url https://download.pytorch.org/whl/cu116 torchvision==0.13.1
+    - --extra-index-url https://download.pytorch.org/whl/cu116 
+    - torch==1.12.1
+    - torchvision==0.13.1
     - Pillow==9.0.1
     - timm==0.5.4
     - tqdm==4.64.0
